@@ -189,16 +189,13 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ["3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.9", "3.10", "3.11"]
         type: ["FULL", "MIN"]
         exclude:
           # Py311 doesn't support all optional deps yet
           - python-version: "3.11"
             type: "FULL"
           # Multiple deps don't like windows
-          - os: windows-latest
-            python-version: "3.8"
-            type: "FULL"
           - os: windows-latest
             python-version: "3.9"
             type: "FULL"
