@@ -104,7 +104,7 @@ jobs:
 
     - uses: actions/setup-python@v4
       with:
-        python-version: 3.8
+        python-version: 3.9
 
     - name: install
       run: |
@@ -126,7 +126,7 @@ jobs:
       - name: setup_miniconda
         uses: conda-incubator/setup-miniconda@v2
         with:
-          python-version: 3.8
+          python-version: 3.9
           auto-update-conda: true
           channel-priority: flexible
           channels: conda-forge, bioconda
