@@ -18,7 +18,7 @@ dependencies:
   - networkx
   - numpy>=1.21
   - pytest
-  - python==3.8
+  - python==3.9
   - pytng>=0.2.3
   - scikit-learn
   - scipy
