@@ -18,6 +18,7 @@ The rules for this file:
          ooprathamm, MeetB7, BFedder, v-parmar, MoSchaeffler, jbarnoud, jandom,
          xhgchen, jaclark5, DrDomenicoMarson, AHMED-salah00, schlaicha, SophiaRuan,
 	 g2707
+
  * 2.5.0
 
 Fixes
@@ -28,7 +29,8 @@ Fixes
   * Allows shape_parameter and asphericity to yield per residue quantities
     (Issue #3002, PR #3905)
   * Add tests for "No path data" exception raise in test_psa.py (Issue #4036)
-  * Fix uninitialized `format` variable issue when calling `selections.get_writer` directly (PR #4043)
+  * Fix uninitialized `format` variable issue when calling
+    `selections.get_writer` directly (PR #4043)
   * Fix tests should use results.rmsf to avoid DeprecationWarning (Issue #3695)
   * Fix EDRReader failing when parsing single-frame EDR files (Issue #3999)
   * Fix test clobbering in lib/test_util.py (PR #4000)
@@ -37,7 +39,8 @@ Fixes
     (Issue #3336)
 
 Enhancements
-  * Add `progressbar_kwargs` parameter to `AnalysisBase.run` method, allowing to modify description, position etc of tqdm progressbars.
+  * Add `progressbar_kwargs` parameter to `AnalysisBase.run` method, allowing
+    to modify description, position etc of tqdm progressbars.
   * Add a nojump transformation, which unwraps trajectories so that particle
     paths are continuous. (Issue #3703, PR #4031)
   * Added AtomGroup TopologyAttr to calculate gyration moments (Issue #3904,
@@ -50,6 +53,7 @@ Enhancements
     and SegmentGroup. (PR #3953)
 
 Changes
+  * As per NEP29 the minimum supported Python version has been raised to 3.9.
   * einsum method for Einstein summation convention introduced to increase 
     performance (Issue #2063, PR #4089)
   * Add progress bars to track the progress of _conclude() functions
